--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
         <title>jhonatan</title>
      </head>
      <body>
-         <p>
-            este es el cuerpo
-         </p>
-     </body>
+         <p>  contenido nuevo  </p>
+         <p>  contenido nuevo2  </p>
+         <p>  contenido nuevo3  </p>
+         <p>  contenido nuevo4  </p>
+         <p>  otra informacion importanteen el archivo </p>
+      </body>
 </html>
